swagger pet and notices-add_remove
