# controllers/notices/addNotice.js
@@ -5,8 +5,6 @@ const { lostAndInGoodHandsSchema, sellSchema } = require("../../schemas");
 const addNotice = catchAsyncWrapper(async (req, res) => {
   const category = req.body.category;
   const file = req.file.path;
-  // const file = req.file;
-  console.log("file", file);
 
   const { error } =
     category === "sell"
@@ -14,13 +12,11 @@ const addNotice = catchAsyncWrapper(async (req, res) => {
       : lostAndInGoodHandsSchema.validate(req.body);
 
   if (error) {
-    throw httpError(400, error.message);
+    throw httpError(400, "Bad request");
   }
 
   const { _id: owner } = req.user;
-  // const result = await Notice.create({ ...req.body, owner });
   const result = await Notice.create({ ...req.body, owner, file });
-  console.log("result", result);
 
   res.status(201).json(result);
 });
