# swagger.json
@@ -403,6 +403,62 @@
             "content": {}
           }
         }
+      },
+      "post": {
+        "post": {
+          "tags": ["Notice"],
+          "summary": "Notice adding a user's notices",
+          "parameters": [],
+          "security": [{ "Bearer": [] }],
+
+          "requestBody": {
+            "description": "Adding a user's notices",
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": [
+                  {
+                    "sell": {
+                      "$ref": "#/components/schemas/AddSellNoticeRequest"
+                    },
+                    "lost-found": {
+                      "$ref": "#/components/schemas/AddNoticeRequest"
+                    },
+                    "for-free": {
+                      "$ref": "#/components/schemas/AddNoticeRequest"
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": [
+                  {
+                    "sell": {
+                      "$ref": "#/components/schemas/AddSellNoticeResponse"
+                    },
+                    "lost-found": {
+                      "$ref": "#/components/schemas/AddNoticeResponse"
+                    },
+                    "for-free": {
+                      "$ref": "#/components/schemas/AddNoticeResponse"
+                    }
+                  }
+                ]
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          }
+        }
       }
     },
 
@@ -424,11 +480,43 @@
         "responses": {
           "200": {
             "description": "OK",
-            "content": {"application/json": {
+            "content": {
+              "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/NoticesByIdResponse"
                 }
-              }}
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {}
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Notice"],
+        "summary": "Delete notices",
+
+        "parameters": [
+          {
+            "in": "path",
+            "name": "noticeId",
+            "description": "delete notices",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [{ "Bearer": [] }],
+
+        "responses": {
+          "200": {
+            "description": "Notice delete",
+            "content": {}
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
           },
           "404": {
             "description": "Not found",
@@ -513,6 +601,76 @@
         "responses": {
           "204": {
             "description": "Pet delete success",
+            "content": {}
+          },
+          "404": {
+            "description": "Not found",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/pet": {
+      "post": {
+        "tags": ["Pet"],
+        "summary": "Pet adding a user's pet",
+
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+
+        "requestBody": {
+          "description": "Adding a user's pet",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddPetRequest"
+              }
+            }
+          }
+        },
+
+        "responses": {
+          "201": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddPetResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          }
+        }
+      }
+    },
+    "/pet/:petId": {
+      "delete": {
+        "tags": ["Pet"],
+        "summary": "Delete pet",
+
+        "parameters": [
+          {
+            "in": "path",
+            "name": "petId",
+            "description": "delete pet",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "security": [{ "Bearer": [] }],
+
+        "responses": {
+          "200": {
+            "description": "Pet deleted",
+            "content": {}
+          },
+          "400": {
+            "description": "Bad request",
             "content": {}
           },
           "404": {
@@ -929,7 +1087,8 @@
             "example": "123345678909876543"
           }
         },
-        "example": [          {
+        "example": [
+          {
             "_id": "64bbfec37d2f5e23d3ffa0e8",
             "name": "rex",
             "title": "This is my lovely pet",
@@ -941,7 +1100,8 @@
             "location": "Kyiv",
             "price": "100",
             "owner": "64bbedd977975050e6f25117"
-          }]
+          }
+        ]
       },
 
       "UserNoticesResponse": {
@@ -1122,6 +1282,436 @@
           }
         },
         "example": ["454657869797888899007766", "112233445566778899009988"]
+      },
+      "AddPetRequest": {
+        "type": "object",
+        "required": ["name", "category", "date", "type", "file"],
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "name pet",
+            "required": true,
+            "example": "Laki"
+          },
+          "category": {
+            "type": "string",
+            "description": "my-pet",
+            "required": true,
+            "example": "my-pet"
+          },
+          "date": {
+            "type": "date",
+            "description": "01.01.2000",
+            "required": true,
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "description": "Persian cat",
+            "required": true,
+            "example": "Persian cat"
+          },
+          "file": {
+            "type": "string",
+            "description": "path to the image",
+            "required": true,
+            "example": "https://petPhotos/64bbedd977975050e6f25117_avatar-1.jpg"
+          }
+        },
+        "example": {
+          "name": "bobik",
+          "category": "my-pet",
+          "date": "01.01.2023",
+          "type": "dog",
+          "file": "https://petPhotos/avatar-1.jpg"
+        }
+      },
+      "AddPetResponse": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Laki",
+            "example": "Laki"
+          },
+          "title": {
+            "type": "string",
+            "description": "This is my lovely pet",
+            "example": "This is my lovely pet"
+          },
+          "category": {
+            "type": "string",
+            "description": "my-pet",
+            "example": "my-pet"
+          },
+          "date": {
+            "type": "date",
+            "description": "01.01.2000",
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "description": "Persian cat",
+            "example": "Persian cat"
+          },
+          "file": {
+            "type": "string",
+            "description": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg",
+            "example": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg"
+          },
+          "sex": {
+            "type": "string",
+            "description": "gender pet",
+            "example": "female"
+          },
+          "location": {
+            "type": "string",
+            "description": "location",
+            "example": "Kyiv"
+          },
+          "owner": {
+            "type": "string",
+            "description": "id owner",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "_id": {
+            "type": "string",
+            "description": "id pet",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "createdAt": {
+            "type": "string",
+            "description": "date of creation",
+            "example": "2023-07-27T19:32:21.893Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "description": "update date",
+            "example": "2023-08-27T19:32:21.893Z"
+          }
+        },
+        "example": {
+          "name": "bobik-test",
+          "title": "This is my lovely pet",
+          "category": "my-pet",
+          "date": "01.01.2023",
+          "type": "dog",
+          "file": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg",
+          "sex": "female",
+          "location": "Kyiv",
+          "owner": "64bbedd977975050e6f25117",
+          "_id": "64c2d17bb6536dc3d21c80e7",
+          "createdAt": "2023-07-27T20:20:11.248Z",
+          "updatedAt": "2023-07-27T20:20:11.248Z"
+        }
+      },
+      "AddSellNoticeRequest": {
+        "type": "object",
+        "required": [
+          "name",
+          "title",
+          "category",
+          "date",
+          "type",
+          "price",
+          "sex",
+          "file"
+        ],
+        "properties": {
+          "title": {
+            "type": "string",
+            "required": true,
+            "description": "title notice",
+            "example": "Give away for free in good hands"
+          },
+          "name": {
+            "type": "string",
+            "required": true,
+            "description": "name pet",
+            "example": "Laki"
+          },
+          "category": {
+            "type": "string",
+            "required": true,
+            "description": "my-pet",
+            "example": "my-pet"
+          },
+          "date": {
+            "type": "date",
+            "required": true,
+            "description": "01.01.2000",
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "required": true,
+            "description": "Persian cat",
+            "example": "Persian cat"
+          },
+          "price": {
+            "type": "number",
+            "required": true,
+            "description": "price",
+            "example": "155"
+          },
+          "sex": {
+            "type": "string",
+            "required": true,
+            "description": "gender pet",
+            "example": "female"
+          },
+          "file": {
+            "type": "string",
+            "required": true,
+            "description": "path to the image",
+            "example": "https://petPhotos/avatar-1.jpg"
+          }
+        },
+        "example": {
+          "name": "bobik",
+          "title": "Sell in good hands",
+          "category": "sell",
+          "date": "08.03.2023",
+          "type": "pitbul",
+          "file": "https:///petPhotos/avatar.jpg",
+          "sex": "male",
+          "price": 155
+        }
+      },
+      "AddSellNoticeResponse": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Laki",
+            "example": "Laki"
+          },
+          "title": {
+            "type": "string",
+            "description": "Sell in good hands",
+            "example": "Sell in good hands"
+          },
+          "category": {
+            "type": "string",
+            "description": "sell",
+            "example": "sell"
+          },
+          "date": {
+            "type": "date",
+            "description": "01.01.2000",
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "description": "Persian cat",
+            "example": "Persian cat"
+          },
+          "file": {
+            "type": "string",
+            "description": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg",
+            "example": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg"
+          },
+          "sex": {
+            "type": "string",
+            "description": "gender pet",
+            "example": "female"
+          },
+          "location": {
+            "type": "string",
+            "description": "location",
+            "example": "Kyiv"
+          },
+          "price": {
+            "type": "number",
+            "description": "price",
+            "example": "155"
+          },
+          "owner": {
+            "type": "string",
+            "description": "id owner",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "_id": {
+            "type": "string",
+            "description": "id notice",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "createdAt": {
+            "type": "string",
+            "description": "date of creation",
+            "example": "2023-07-27T19:32:21.893Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "description": "update date",
+            "example": "2023-08-27T19:32:21.893Z"
+          }
+        },
+        "example": {
+          "name": "bobik-sell",
+          "title": "Give away for free in good hands",
+          "category": "sell",
+          "date": "08.03.2023",
+          "type": "pitbul",
+          "file": "https://res.cloudinary.com/diyki6u01/image/upload/v1690472169/petPhotos/64bbedd977975050e6f25117_avatar.jpg",
+          "sex": "male",
+          "location": "Kyiv",
+          "price": 155,
+          "owner": "64bbedd977975050e6f25117",
+          "_id": "64c3951b4476083de8603053",
+          "createdAt": "2023-07-28T10:14:51.913Z",
+          "updatedAt": "2023-07-28T10:14:51.913Z"
+        }
+      },
+      "AddNoticeRequest": {
+        "type": "object",
+        "required": [
+          "name",
+          "title",
+          "category",
+          "date",
+          "type",
+          "sex",
+          "file"
+        ],
+        "properties": {
+          "title": {
+            "type": "string",
+            "required": true,
+            "description": "title notice",
+            "example": "Give away for free in good hands"
+          },
+          "name": {
+            "type": "string",
+            "required": true,
+            "description": "name pet",
+            "example": "Laki"
+          },
+          "category": {
+            "type": "string",
+            "required": true,
+            "description": "for-free",
+            "example": "for-free"
+          },
+          "date": {
+            "type": "date",
+            "required": true,
+            "description": "01.01.2000",
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "required": true,
+            "description": "Persian cat",
+            "example": "Persian cat"
+          },
+          "sex": {
+            "type": "string",
+            "required": true,
+            "description": "gender pet",
+            "example": "female"
+          },
+          "file": {
+            "type": "string",
+            "required": true,
+            "description": "path to the image",
+            "example": "https://petPhotos/avatar-1.jpg"
+          }
+        },
+        "example": {
+          "name": "bobik",
+          "title": "Give away for free in good hands",
+          "category": "for-free",
+          "date": "08.03.2023",
+          "type": "pitbul",
+          "file": "https:///petPhotos/avatar.jpg",
+          "sex": "male"
+        }
+      },
+      "AddNoticeResponse": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Laki",
+            "example": "Laki"
+          },
+          "title": {
+            "type": "string",
+            "description": "Give away for free in good hands",
+            "example": "Give away for free in good hands"
+          },
+          "category": {
+            "type": "string",
+            "description": "for-free",
+            "example": "for-free"
+          },
+          "date": {
+            "type": "date",
+            "description": "01.01.2000",
+            "example": "01.01.2000"
+          },
+          "type": {
+            "type": "string",
+            "description": "Persian cat",
+            "example": "Persian cat"
+          },
+          "file": {
+            "type": "string",
+            "description": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg",
+            "example": "https://res.cloudinary.com/diyki6u01/image/upload/v1690465746/petPhotos/64bbedd977975050e6f25117_avatar-1.jpg"
+          },
+          "sex": {
+            "type": "string",
+            "description": "gender pet",
+            "example": "female"
+          },
+          "location": {
+            "type": "string",
+            "description": "location",
+            "example": "Kyiv"
+          },
+          "price": {
+            "type": "number",
+            "description": "price",
+            "example": "155"
+          },
+          "owner": {
+            "type": "string",
+            "description": "id owner",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "_id": {
+            "type": "string",
+            "description": "id notice",
+            "example": "64c2c645468d8a908fcb0df6"
+          },
+          "createdAt": {
+            "type": "string",
+            "description": "date of creation",
+            "example": "2023-07-27T19:32:21.893Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "description": "update date",
+            "example": "2023-08-27T19:32:21.893Z"
+          }
+        },
+        "example": {
+          "name": "bobik",
+          "title": "Give away for free in good hands",
+          "category": "for-free",
+          "date": "08.03.2023",
+          "type": "pitbul",
+          "file": "https://res.cloudinary.com/diyki6u01/image/upload/v1690472169/petPhotos/64bbedd977975050e6f25117_avatar.jpg",
+          "sex": "male",
+          "location": "Kyiv",
+          "price": 0,
+          "owner": "64bbedd977975050e6f25117",
+          "_id": "64c3951b4476083de8603053",
+          "createdAt": "2023-07-28T10:14:51.913Z",
+          "updatedAt": "2023-07-28T10:14:51.913Z"
+        }
       }
     },
     "securitySchemes": {
